# webserver_modern_cpp

./: .clang-format  .gitignore  CMakeLists.txt  Directions.md  README.md
test/: CMakeLists.txt  test_dynamic_pool.cc  test_steady_pool.cc
threadpool/: CMakeLists.txt  README.md
threadpool/include/threadpool/: atomic_spin_lock.h  dynamic_pool.h  steady_pool.h
utils/: CMakeLists.txt
utils/include/utils/: printer.h  show_type.h  tictok.h
utils/src/: hello.cpp
webserver/: CMakeLists.txt
webserver/src/: main.cpp
